# adb-studio

./: CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE.md  README.md
.github/workflows/: release.yml
assets/: styles.css
src/: adb.rs  app.rs  app_manager.rs  device.rs  fileops.rs  log_viewer.rs  main.rs  media.rs  settings.rs  terminal.rs
